chore: Update project configuration and metadata for SmartGain 2026
- Add comprehensive .gitignore configuration with modern tooling exclusions (Vite, TypeScript, environment variables, cache directories)
- Update LICENSE with SmartGain Development Team copyright and 2026 year
- Enhance package.json with project description, keywords, author, and Apache-2.0 license metadata
- Expand robots.txt with SEO optimization for modern search engines and AI crawlers (GPTBot, Claude, LinkedIn, WhatsApp, Telegram)
- Add crawl-delay directives and sitemap reference for improved search engine indexing
- Establish consistent project branding and metadata across configuration files

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "2.0.0",
   "type": "module",
+  "description": "SmartGain 2026 - Intelligent Weight Gain Planning Application with AI-powered nutrition algorithms",
+  "keywords": ["weight-gain", "nutrition", "fitness", "calorie-calculator", "2026", "ai-powered"],
+  "author": "SmartGain Development Team",
+  "license": "Apache-2.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
