--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# SmartGain 2026 - Git Ignore Configuration
+# Modern React + TypeScript + Vite project exclusions
+
 # Logs
 logs
 *.log
@@ -6,19 +9,57 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+bun-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Build outputs
+dist/
+dist-ssr/
+build/
 *.local
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Testing
+coverage/
+.nyc_output/
+
+# Cache directories
+.cache/
+.parcel-cache/
+.next/
+.nuxt/
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+
+# 2026 Modern tooling
+.turbo/
+.vercel/
+.netlify/
