--- a/components.json
+++ b/components.json
@@ -15,6 +15,13 @@
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "@/hooks",
+    "types": "@/types",
+    "constants": "@/constants"
+  },
+  "iconLibrary": "lucide-react",
+  "experimentalFeatures": {
+    "rsc": false,
+    "optimizedBundle": true
   }
 }
