--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "version": "2.0.0",
   "type": "module",
   "description": "SmartGain 2026 - Intelligent Weight Gain Planning Application with AI-powered nutrition algorithms",
-  "keywords": ["weight-gain", "nutrition", "fitness", "calorie-calculator", "2026", "ai-powered"],
+  "keywords": [
+    "weight-gain",
+    "nutrition",
+    "fitness",
+    "calorie-calculator",
+    "2026",
+    "ai-powered"
+  ],
   "author": "SmartGain Development Team",
   "license": "Apache-2.0",
   "scripts": {
@@ -48,6 +55,8 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.13.4",
+    "axios-retry": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
